--- a/css/main.css
+++ b/css/main.css
@@ -1,179 +1,184 @@
-#adsBottom,
-#canvas {
-    left: 0;
-    right: 0;
-    bottom: 0;
-    position: absolute
-}
+            #canvas {
+            left: 0;
+            right: 0;
+            bottom: 0;
+            position: absolute
+        }
 
-#adsBottom,
-#canvas,
-#chat_textbox,
-#helloDialog {
-    position: absolute;
-}
+        #helloDialog {
+            position: absolute;
+        }
 
-.ui-dialog,
-body {
-    overflow: hidden
-}
+        body {
+            padding: 0;
+            margin: 0
+        }
 
-body {
-    padding: 0;
-    margin: 0
-}
+        #canvas {
+            top: 0;
+            width: 100%;
+            height: 100%
+        }
 
-#canvas {
-    top: 0;
-    width: 100%;
-    height: 100%
-}
+        .checkbox label {
+            margin-right: 10px
+        }
 
-.checkbox label {
-    margin-right: 10px
-}
+        form {
+            margin-bottom: 0
+        }
 
-form {
-    margin-bottom: 0
-}
+        .btn-play,
+        .btn-settings,
+        .btn-watch {
+            display: block;
+            height: 35px
+        }
 
-.btn-play,
-.btn-settings,
-.btn-spectate {
-    display: block;
-    height: 35px
-}
+        .btn-play {
+            width: 65%;
+            float: left
+        }
 
-.btn-play {
-    width: 60%;
-    float: left
-}
+        .btn-settings {
+            width: 13%;
+            float: right
+        }
 
-.btn-settings {
-    width: 13%;
-    float: right
-}
+        .btn-watch {
+            display: block;
+            float: right
+        }
 
-.btn-spectate {
-    display: block;
-    float: right
-}
+        #nick {
+            width: 65%;
+            float: left
+        }
 
-#adsBottomInner {
-    margin: 0 auto;
-    width: 728px;
-    height: 90px;
-    border: 5px solid #fff;
-    border-radius: 5px 5px 0 0;
-    background-color: #FFF;
-    box-sizing: content-box
-}
+        #locationUnknown #region {
+            margin-bottom: 15px
+        }
 
-.region-message {
-    display: none;
-    margin-bottom: 12px;
-    margin-left: 6px;
-    margin-right: 6px;
-    text-align: center
-}
+        #watchBtn {
+            width: 33%;
+            float: right
+        }
 
-#locationKnown #region,
-#nick {
-    width: 65%;
-    float: left
-}
+        #helloDialog:hover {
+            border-top: #000FFF;
+            border-bottom: #000FFF;
+            border-left: #000FFF;
+            border-right: #000FFF;
+        }
 
-#locationUnknown #region {
-    margin-bottom: 15px
-}
+        #helloDialog {
+            width: 350px;
+            background-size: 350px;
+            background-color: rgb(51, 51, 51);
+            margin: 10px -50% 10px auto;
+            padding: 5px 15px;
+            top: 50%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%)
+        }
 
-#gamemode,
-#spectateBtn {
-    width: 33%;
-    float: right
-}
+        .bs-example {
+            margin: 20px;
+        }
 
-#helloDialog:hover {
-    border: 1px solid black;
-}
+        .Profimg {
+            border-color: white;
+            border-width: 2px;
+            border-style: solid;
+            width: 100px;
+            border-radius: 50%;
+            height: 100px;
+        }
 
-#helloDialog {
+        #leftPanel {
+            width: 300px;
+            height: 350px;
+            background-image: url(http://inspiringdiscovery.com/wp-content/uploads/2013/07/harbour_sunset-wide.jpg);
+            margin: 10px;
+            padding: 5px 15px 5px 15px;
+            position: absolute;
+            top: 46%;
+            left: -50%;
+            margin-right: -70%;
+            -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+        }
 
-    top: 50%;
-    left: 50%;
-    display: inline-block;
-    width: 350px;
-    background-color: #FFF;
-    margin: 2px;
-    border-radius: 10px;
-    padding: 5px 15px;
-    vertical-align: top;
-}
+        .navcoins {
+            padding: 0px 10px;
+            height: 30px;
+            line-height: 31px;
+            font-size: 16px;
+            margin-left: 5px;
+        }
 
-#chat_textbox {
-    -webkit-transition: all .5s ease-in-out;
-    -moz-transition: all .5s ease-in-out;
-    -o-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    z-index: 1;
-    bottom: 10px;
-    background: rgba(0, 0, 0, .2);
-    border: 0;
-    outline: 0;
-    color: #FFF;
-    height: 30px;
-    text-indent: 12px;
-    left: 10px;
-    width: 300px
-}
+        .agario-side-panel {
+            display: inline-block;
+            width: 220px;
+            margin: 2px 0
+        }
 
-#chat_textbox:focus {
-    background: rgba(0, 0, 0, .5)
-}
+        .agario-panel {
+            display: inline-block;
+            width: 350px;
+            background-color: #FFF;
+            margin: 2px;
+            border-radius: 10px;
+            padding: 5px 15px;
+            vertical-align: top
+        }
 
-#a300x250 {
-    width: 300px;
-    height: 250px;
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center center
-}
+        .agario-shop-panel {
+            padding: 15px;
+            float: right
+        }
 
-.ui-dialog {
-    background-color: #141414;
-    background-image: url(http://agariohub.tk/assets/img/texture.png);
-    z-index: 100000
-}
+        .side-container {
+            vertical-align: top;
+            display: inline-block;
+            width: 294px
+        }
 
-.ui-widget-overlay {
-    overflow: hidden;
-    z-index: 1000000
-}
+        .left-container {
+            width: 250px;
+            margin-left: 44px
+        }
 
-.skinclick {
-    cursor: pointer;
-    padding: 2px;
-    position: relative;
-    right: -12px;
-    border-radius: 50%;
-    -webkit-transition: all .5s ease;
-    -moz-transition: all .5s ease;
-    -ms-transition: all .5s ease;
-    -o-transition: all .5s ease;
-    transition: all .5s ease;
-    border: 1px solid orange
-}
+        .menu {
+            width: 100px;
+            background: #000;
+            color: #fff;
+            position: absolute;
+            z-index: 999999;
+            display: none;
+            box-shadow: 0 0 10px #713C3C;
+        }
 
-.skinlist:hover {
-    cursor: pointer;
-}
+        .menu ul {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-.skinclick:hover {
-    border: 1px solid #fff;
-    z-index: 99999999999999;
-    -webkit-transform: scale(2.25);
-    -moz-transform: scale(2.25);
-    -ms-transform: scale(2.25);
-    -o-transform: scale(2.25);
-    transform: scale(2.25)
-}
+        .menu ul a {
+            text-decoration: none;
+        }
+
+        .menu ul li {
+            width: 88%;
+            padding: 6%;
+            background-color: #F04D44;
+            color: #fff;
+        }
+
+        .menu ul li:hover {
+            background-color: #F7BA4B;
+            color: #444343;
