--- a/css/main.css
+++ b/css/main.css
@@ -99,5 +99,25 @@
                 transform: translate(-50%, -50%)
             }
 
-
-        
+            #chat {
+                -webkit-transition: all .5s ease-in-out;
+                -moz-transition: all .5s ease-in-out;
+                -o-transition: all .5s ease-in-out;
+                transition: all .5s ease-in-out;
+                z-index: 1;
+                bottom: 10px;
+                background: rgba(0, 0, 0, .2);
+                border: 0;
+                outline: 0;
+                color: #FFF;
+                height: 30px;
+                text-indent: 12px;
+                position: fixed;
+                bottom: 20;
+                left: 20;
+                width: 300px
+            }
+    
+            #chat:focus {
+                background: rgba(0, 0, 0, .5)
+            }
